@@ -12,26 +12,15 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.prepost.PreAuthorize;
-import org.springframework.web.bind.annotation.DeleteMapping;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.PutMapping;
-import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.bind.annotation.*;
 import com.the_herd.backend.repositories.EventRepository;
 import com.the_herd.backend.repositories.TicketRepository;
 import com.the_herd.backend.models.Event;
 import com.the_herd.backend.models.Ticket;
 import com.the_herd.backend.controllers.responses.GuestResponse;
 
-
-
-
-
 @RestController
-@RequestMapping("/api/v1/events")
+@RequestMapping("/api/events")
 @RequiredArgsConstructor
 public class EventController {
     private final EventRepository eventRepository;
@@ -79,7 +68,7 @@ public class EventController {
     
         List<GuestResponse> guestsInfo = eventTickets.stream()
             .map(ticket -> new GuestResponse(ticket.getUser().getFirstName(), ticket.getUser().getLastName(), ticket.getUser().getEmail()))
-            .collect(Collectors.toList());
+                .toList();
     
         return ResponseEntity.ok(guestsInfo);
     }
